# Adversarial-Resilient-Agent-Harness

./: README.md  app.py  pyproject.toml
docs/: design.md
docs/images/: README.md
src/harness/: __init__.py  agent.py  cli.py  config.py  fetcher.py  llm.py  models.py  security.py
tests/: test_harness.py
